--- a/cart.html
+++ b/cart.html
@@ -35,7 +35,7 @@
     
     </header>
     <div id="glitter-container"></div>
-    <h1>Your Cart</h1>
+    <h1 class="ca">Your Cart</h1>
     
     <div class="gallery">
         <img src="assets/shop1.png" alt="Product 5" class="gallery">
