--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
             <input type="email" id="email" name="email" required><br>
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea><br>
-            <button type="submit" value="Send">Send</button>
+            <button type="submit" value="Send" class="bu">Send</button>
             <div id="response-message"></div> <!-- Placeholder for response message -->
         </form>
     </div>
