--- a/payment.html
+++ b/payment.html
@@ -51,7 +51,7 @@
                 <input type="text" id="cvv" required>
             </div>
 
-            <button type="submit">Submit Payment</button>
+            <button type="submit" class="but">Submit Payment</button>
         </form>
     </main>
 
