--- a/payment.html
+++ b/payment.html
@@ -17,6 +17,10 @@
 <body>
    
     <header>
+        <div class="logo-container">
+            <img src="assets/db.png" alt="Logo" class="logo-img">
+            <span class="logo-text">Deal-Basket</span>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,6 +29,7 @@
                 <li><a href="cart.html">Cart</a></li>
             </ul>
         </nav>
+        
         
     </header>
 
