--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <!-- Header with Navigation -->
+   
     <header>
         <div class="logo-container">
             <img src="assets/db.png" alt="Logo" class="logo-img">
@@ -28,7 +28,6 @@
         </nav>
     </header>
 
-    <!-- Main Content -->
     <main>
         <h1>Contact Us</h1>
         <div class="cont">
@@ -45,7 +44,7 @@
             <label for="message">Message:</label>
             <textarea id="message" name="message" required></textarea><br>
             <button type="submit" value="Send" class="bu">Send</button>
-            <div id="response-message"></div> <!-- Placeholder for response message -->
+            <div id="response-message"></div>
         </form>
     </div>
     </main>
